added optional support
- optional fields or parameters can now be marked with `?`
- they are then nullable and treated accordingly in the different target languages
- added integration testing for optionals in records
- added unit test to make sure optional types can be parsed

--- a/src/pydjinni/generator/cpp/cpp/templates/base.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/base.jinja2
@@ -3,6 +3,9 @@
 
 {% block header %}
 {% endblock %}
+{% if type_def.dependencies | needs_optional %}
+#include <optional>
+{% endif %}
 {% for header in type_def.dependencies | headers('cpp') -%}
 #include {{ header }}
 {% endfor %}
