--- a/src/pydjinni/generator/java/java/templates/macros.jinja2
+++ b/src/pydjinni/generator/java/java/templates/macros.jinja2
@@ -22,7 +22,7 @@
 {% endmacro %}
 
 {% macro data_type(type_ref, boxed=False) %}
-{{ type_ref.type_def.java.boxed if boxed else type_ref.type_def.java.typename }}
+{{ type_ref.type_def.java.boxed if boxed or type_ref.optional else type_ref.type_def.java.typename }}
 {%- if type_ref.parameters -%}
     <
     {%- for parameter in type_ref.parameters -%}
