--- a/src/pydjinni/generator/java/java/templates/macros.jinja2
+++ b/src/pydjinni/generator/java/java/templates/macros.jinja2
@@ -26,7 +26,7 @@
 {%- if type_ref.parameters -%}
     <
     {%- for parameter in type_ref.parameters -%}
-        {{ data_type(parameter, boxed=True) }}
+        {{ data_type(parameter, boxed=True) ~ (", " if not loop.last) }}
     {%- endfor -%}
     >
 {%- endif -%}
