migrate record deriving to enum set
- the grammar does not know about valid values
- the parser checks if the parser input can be mapped to an Deriving enum value
- if not, an error is thrown
- added automatically generated documentation for supported derivings
- removed generate.cpp.default_record_constructor (is now a deriving capability)
- fixed error with wrong class descriptor in generated jni gluecode

--- a/src/pydjinni/generator/cpp/cpp/templates/header/record.hpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/header/record.hpp.jinja2
@@ -27,7 +27,7 @@ struct {{ type_def.cpp.name }} final {
     {% endfor %}
     {}
 
-{% if config.default_record_constructor and type_def.fields %}
+{% if 'init' in type_def.deriving and type_def.fields %}
     {{ type_def.cpp.name }}()
     {% for field in type_def.fields %}
     {{ (": " if loop.first else ', ') ~ field.cpp.name }}()
