--- a/src/pydjinni/generator/java/java/templates/macros.jinja2
+++ b/src/pydjinni/generator/java/java/templates/macros.jinja2
@@ -4,6 +4,16 @@
 {%- endif -%}
 {% endmacro %}
 
+{%- macro return_type(type_ref) -%}
+{{ data_type(type_ref) if type_ref else "void" }}
+{%- endmacro -%}
+
+{% macro parameters(method, with_types = True) %}
+{%- for parameter in method.parameters -%}
+    {{ (data_type(parameter.type_ref) ~ " ") if with_types }}{{ parameter.java.name ~ (", " if not loop.last) }}
+{%- endfor -%}
+{% endmacro %}
+
 {% macro value_def(value, type_def) %}
 {%- if value is string -%}"{{ value }}"
 {%- elif value is boolean %}{{ "true" if value else "false" }}
