--- a/src/pydjinni/generator/objc/objc/templates/header/enum.h.jinja2
+++ b/src/pydjinni/generator/objc/objc/templates/header/enum.h.jinja2
@@ -1,7 +1,9 @@
 {% extends "base.jinja2" %}
 
 {% block content %}
+{% if type_def.comment %}
 {{ type_def.objc.comment }}
+{% endif %}
 NS_SWIFT_NAME({{ type_def.objc.swift_typename }})
 typedef NS_ENUM(NSUInteger, {{ type_def.objc.typename }}) {
 {% for item in type_def.items %}
