--- a/src/pydjinni/generator/cpp/cpp/templates/header/flags.hpp.jinja2
+++ b/src/pydjinni/generator/cpp/cpp/templates/header/flags.hpp.jinja2
@@ -1,5 +1,4 @@
 {% extends "base.jinja2" %}
-{% from "macros.jinja2" import comment %}
 
 {% block header %}
 #pragma once
@@ -8,10 +7,14 @@
 {% set counter = namespace(value=0) %}
 
 {% block content %}
-{{ comment(type_def) }}
+{% if type_def.comment %}
+{{ type_def.cpp.comment }}
+{% endif %}
 enum class {{ type_def.cpp.name }} : unsigned {
 {% for flag in type_def.flags %}
-    {{ comment(flag) }}
+    {% if flag.comment %}
+    {{ flag.cpp.comment | indent(4) }}
+    {% endif %}
     {{ flag.cpp.name ~ " = " -}}
     {% if flag.none %}
         {{- "0" -}}
