--- a/src/pydjinni/generator/java/jni/templates/source/interface.cpp.jinja2
+++ b/src/pydjinni/generator/java/jni/templates/source/interface.cpp.jinja2
@@ -1,5 +1,5 @@
 {% extends "base.jinja2" %}
-{% from "macros.jinja2" import translator, return_type %}
+{% from "macros.jinja2" import translator %}
 
 {% block header %}
 #include {{ type_def.jni.header | quote }}
@@ -49,7 +49,7 @@ CJNIEXPORT void JNICALL {{ type_def.jni.jni_prefix }}_nativeDestroy(JNIEnv* jniE
 }
 
 {% for method in type_def.methods %}
-CJNIEXPORT {{ return_type(method) }} JNICALL {{ type_def.jni.jni_prefix }}_00024CppProxy_{{ "native_1" if not method.static }}{{ method.jni.name }}(JNIEnv* jniEnv, jobject /*this*/{{ ", jlong nativeRef" if not method.static }}
+CJNIEXPORT {{ method.jni.return_type_spec }} JNICALL {{ type_def.jni.jni_prefix }}_00024CppProxy_{{ "native_1" if not method.static }}{{ method.jni.name }}(JNIEnv* jniEnv, jobject /*this*/{{ ", jlong nativeRef" if not method.static }}
     {%- for parameter in method.parameters -%}
     , {{ parameter.type_ref.type_def.jni.typename.value }} {{ parameter.jni.name }}
     {%- endfor -%}
