--- a/src/pydjinni/generator/objc/objc/templates/macros.jinja2
+++ b/src/pydjinni/generator/objc/objc/templates/macros.jinja2
@@ -15,9 +15,9 @@
 {% if constant.comment %}
 {{ constant.objc.comment }}
 {% endif %}
-extern const {{ constant.type_ref.type_def.objc.typename }} {{ type_def.objc.typename }}{{ constant.objc.name|title }};
+extern {{ constant.objc.type_decl ~ constant.objc.annotation }} const {{ type_def.objc.typename }}{{ constant.objc.name|title }};
 {% endmacro %}
 
 {% macro constant_definition(type_def, constant) %}
-const {{ constant.type_ref.type_def.objc.typename }} {{ type_def.objc.typename }}{{ constant.objc.name|title }} = {{ value_def(constant.value, constant.type_ref.type_def) }};
+{{ constant.objc.type_decl ~ constant.objc.annotation }} const {{ type_def.objc.typename }}{{ constant.objc.name|title }} = {{ value_def(constant.value, constant.type_ref.type_def) }};
 {% endmacro %}
